--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,77 @@
-
 body {
-    padding-top: 200px;
-    /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
+   padding-top: 200px;
+   /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
 }
 #myImg {
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
+   border-radius: 5px;
+   cursor: pointer;
+   transition: 0.3s;
+}
+#img01{
+   max-width:100%;
 }
 
 #myImg:hover {
-    opacity: 0.7;
+   opacity: 0.7;
 }
 
 .modal {
-    z-index:1;
-    display:none;
-    padding-top:10px;
-    position:fixed;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-    overflow:auto;
-    background-color:rgb(0,0,0);
+   z-index:1;
+   display:none;
+   padding-top:10px;
+   position:fixed;
+   left:0;
+   top:0;
+   width:100%;
+   height:100%;
+   overflow:auto;
+   background-color:rgba(0, 0, 0, 0.78);
 }
 
 .modal-content{
-    margin: auto;
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+   margin: auto;
+   display: block;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   background: rgba(0, 0, 0, 0.78);
+   text-align: center;
 }
 
 .modal-hover-opacity {
-    opacity:1;
-    filter:alpha(opacity=100);
-    backface-visibility:hidden
+   opacity:1;
+   filter:alpha(opacity=100);
+   backface-visibility:hidden
 }
 
 .modal-hover-opacity:hover {
-    opacity:0.60;
-    filter:alpha(opacity=60);
-    backface-visibility:hidden
+   opacity:0.60;
+   filter:alpha(opacity=60);
+   backface-visibility:hidden
+}
+
+.modal-content{
+   animation-name: zoom;
+   animation-duration: 0.6s;
+   /* background: transparent; */
 }
 
 .close {
-    text-decoration:none;
-    float:right;
-    font-size:24px;
-    font-weight:bold;
-    color:white
+   text-decoration:none;
+   float:right;
+   font-size:24px;
+   font-weight:bold;
+   color:white
 }
 
 .container1 {
-    width:200px;
-    display:inline-block;
-}
-
-.modal-content, #caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
+   width:200px;
+   display:inline-block;
 }
 
 @keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
+   from {transform:scale(0)}
+   to {transform:scale(1)}
 }
+
