--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,15 @@ body {
 }
 #img01{
    max-width:100%;
+   padding:1%;
 }
 
 #myImg:hover {
    opacity: 0.7;
 }
-
+.icon{
+    width:10%;
+}
 .modal {
    z-index:1;
    display:none;
@@ -68,6 +71,20 @@ body {
 .container1 {
    width:200px;
    display:inline-block;
+}
+.thumb {
+    margin-bottom: 30px;
+    width : 33%;
+    height : 20%;
+}
+
+.thumbnail img {
+    width : 100%;
+    height : 200px;
+}
+
+.thumbnail p {
+	word-wrap: break-word;
 }
 
 @keyframes zoom {
