--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ body {
 .modal-content{
    animation-name: zoom;
    animation-duration: 0.6s;
-   /* background: transparent; */
 }
 
 .close {
@@ -88,7 +87,7 @@ body {
 }
 
 @keyframes zoom {
-   from {transform:scale(0)}
-   to {transform:scale(1)}
+   from {transform:scale(0),opacity=.5}
+   to {transform:scale(1),opacity=1}
 }
 
